    pages.
 * Correctly set /view files to be utf-8 to fix "wide character" warnings.
 * Fixed navigation aids to correctly link to subjects in a sub-menu, which
    required a new mode (4) to $session->render_subjects
 * Added code to generate_views to report an error if an illegal view id is
    passed as an option.
 * Added warning to Subjects about subjects with non-existant parents.
 * Added "root" subject to Subject->get_all
 * Added "up a level" to browsing multi level views.

2008-10-14 cjg
 * Fixed minor bug in Component::Upload which prevented it working with zero
    fields from the document.

2008-10-14 cjg
 * Fixed honeycomb plugin to not cause problems if the honeycomb module is 
    not installed.

2008-10-14 cjg
 * Added feature to phrase editor so it can be called with a limited list of
    phrase id's -- for planned by-page phrase editing.

2008-10-14 tdb
 * If a format doesn't have an icon use it's major mime type icon, or unknown

2008-10-15 cjg
 * Added dates to UKETD export plugin. Resolving #3445.

2008-10-15 cjg
 * Changed URL fields to be TEXT not VARCHAR(255). These are *not* a subclass
    of "Longtext", the only change is to storage. This will only impact newly
    created fields. Resolving #3436.

2008-10-15 cjg
 * Fixed "up a level" to link correctly.
 * Removed the "navigation aids" from the .include files.

2008-10-16 cjg
 * Fixed minor bug introduced in previous change to Url.pm

2008-10-16 cjg
 * Removed stray Dumper() debug line from Update::Views

2008-10-23 tdb
 * Fixed utf-8 problems in views by removing binmode(FH,":utf8")
 * Replaced all uses of toString with EPrints::XML::to_string in views

2008-10-29 cjg
 * Added :utf8 back in! 
 * Fixed issue in Utils which decoded when it should have encoded.

2008-10-29 cjg
 * Fixed typo in prepare_page. template_id should have been template. Closes
    #3457.

2008-10-29 cjg
 * Added <template> option to .xpage files.
